<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.hoangtruc.shopapp.view.DetailProductActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="300"
        android:title="@string/action_favorite"
        app:showAsAction="always"
        android:icon="@drawable/ic_favorite_border_white_24dp" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="200"
        android:title="@string/action_share"
        app:showAsAction="always"
        android:icon="@drawable/ic_share_white_24dp"/>
    <item
        android:id="@+id/action_cart"
        android:orderInCategory="100"
        android:title="cart"
        app:showAsAction="always"
        app:actionLayout="@layout/menu_cart"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        />

</menu>
